--- a/tests/workspace_aws_examples/workspace_test_config.yaml
+++ b/tests/workspace_aws_examples/workspace_test_config.yaml
@@ -21,6 +21,37 @@ examples:
       - address: module.atlas_aws.module.encryption[0].mongodbatlas_encryption_at_rest.this
       - address: module.atlas_aws.module.encryption_private_endpoint["us-east-1"].mongodbatlas_encryption_at_rest_private_endpoint.this
 
+  - name: privatelink
+    var_groups: [privatelink]
+    plan_regressions:
+      - address: module.atlas_aws.mongodbatlas_privatelink_endpoint.this["us-east-1"]
+      - address: module.atlas_aws.module.privatelink["us-east-1"].aws_security_group.this[0]
+      - address: module.atlas_aws.module.privatelink["us-east-1"].aws_security_group_rule.ingress_cidr[0]
+      - address: module.atlas_aws.module.privatelink["us-east-1"].aws_vpc_endpoint.this[0]
+      - address: module.atlas_aws.module.privatelink["us-east-1"].mongodbatlas_privatelink_endpoint_service.this
+
+  - name: privatelink_byoe
+    var_groups: [privatelink_byoe]
+    plan_regressions:
+      - address: module.atlas_aws.mongodbatlas_privatelink_endpoint.this["ep1"]
+      - address: module.atlas_aws.module.privatelink["ep1"].mongodbatlas_privatelink_endpoint_service.this
+      - address: aws_vpc_endpoint.custom
+
+  - name: privatelink_multi_region
+    var_groups: [privatelink_multi_region]
+    plan_regressions:
+      - address: module.atlas_aws.mongodbatlas_private_endpoint_regional_mode.this[0]
+      - address: module.atlas_aws.mongodbatlas_privatelink_endpoint.this["us-east-1"]
+      - address: module.atlas_aws.mongodbatlas_privatelink_endpoint.this["us-west-2"]
+      - address: module.atlas_aws.module.privatelink["us-east-1"].aws_security_group.this[0]
+      - address: module.atlas_aws.module.privatelink["us-east-1"].aws_security_group_rule.ingress_cidr[0]
+      - address: module.atlas_aws.module.privatelink["us-east-1"].aws_vpc_endpoint.this[0]
+      - address: module.atlas_aws.module.privatelink["us-east-1"].mongodbatlas_privatelink_endpoint_service.this
+      - address: module.atlas_aws.module.privatelink["us-west-2"].aws_security_group.this[0]
+      - address: module.atlas_aws.module.privatelink["us-west-2"].aws_security_group_rule.ingress_cidr[0]
+      - address: module.atlas_aws.module.privatelink["us-west-2"].aws_vpc_endpoint.this[0]
+      - address: module.atlas_aws.module.privatelink["us-west-2"].mongodbatlas_privatelink_endpoint_service.this
+
 var_groups:
   encryption:
     - name: project_id
@@ -31,3 +62,45 @@ var_groups:
     - name: project_id
       expose_in_workspace: false
       module_value: local.project_id_encryption_private_endpoint
+
+  privatelink:
+    - name: project_id
+      expose_in_workspace: false
+      module_value: local.project_id_privatelink
+    - name: aws_region
+      expose_in_workspace: false
+      module_value: '"us-east-1"'
+    - name: vpc_id
+      expose_in_workspace: false
+      module_value: local.vpc_id_privatelink
+
+  privatelink_byoe:
+    - name: project_id
+      expose_in_workspace: false
+      module_value: local.project_id_privatelink_byoe
+    - name: aws_region
+      expose_in_workspace: false
+      module_value: '"us-east-1"'
+    - name: vpc_id
+      expose_in_workspace: false
+      module_value: local.vpc_id_privatelink_byoe
+    - name: subnet_ids
+      expose_in_workspace: false
+      module_value: local.subnet_ids_privatelink_byoe
+    - name: security_group_ids
+      expose_in_workspace: false
+      module_value: local.security_group_ids_byoe
+
+  privatelink_multi_region:
+    - name: project_id
+      expose_in_workspace: false
+      module_value: local.project_id_privatelink_multi_region
+    - name: aws_region
+      expose_in_workspace: false
+      module_value: '""'
+    - name: subnet_ids_us_east_1
+      expose_in_workspace: false
+      module_value: local.subnet_ids_us_east_1
+    - name: subnet_ids_us_west_2
+      expose_in_workspace: false
+      module_value: local.subnet_ids_us_west_2
