--- a/tests/workspace_aws_examples/plan_snapshots/privatelink_multi_region/module_atlas_aws_module_privatelink["us-west-2"]_aws_security_group_rule_ingress_cidr[0].yaml
+++ b/tests/workspace_aws_examples/plan_snapshots/privatelink_multi_region/module_atlas_aws_module_privatelink["us-west-2"]_aws_security_group_rule_ingress_cidr[0].yaml
@@ -1,7 +1,7 @@
 description: MongoDB Atlas PrivateLink
 from_port: 1024
 protocol: tcp
-region: us-east-1
+region: us-west-2
 self: false
 to_port: 65535
 type: ingress
