chore: regen test

--- a/tests/workspace_aws_examples/workspace_test_config.yaml
+++ b/tests/workspace_aws_examples/workspace_test_config.yaml
@@ -51,3 +51,6 @@ var_groups:
     - name: force_destroy
       expose_in_workspace: false
       module_value: "true"
+    - name: bucket_name_prefix
+      expose_in_workspace: false
+      module_value: '"mongodb-atlas-tf-"'
