feat: Enhance encryption private endpoint module
- Added a data source for `mongodbatlas_encryption_at_rest_private_endpoint` to retrieve the status and error message of the private endpoint.
- Updated output variables in `outputs.tf` to reference the new data source for improved clarity.
- Introduced `aws_region` variable in the workspace test configuration for better testing flexibility.

--- a/tests/workspace_aws_examples/workspace_test_config.yaml
+++ b/tests/workspace_aws_examples/workspace_test_config.yaml
@@ -74,6 +74,9 @@ var_groups:
     - name: project_id
       expose_in_workspace: false
       module_value: local.project_id_encryption_private_endpoint
+    - name: aws_region
+      expose_in_workspace: false
+      module_value: '"us-east-1"'
 
   backup_export:
     - name: project_id
