chore: regen snapshots

--- a/tests/workspace_aws_examples/plan_snapshots/backup_export/module_atlas_aws_module_backup_export[0]_aws_s3_bucket_atlas[0].yaml
+++ b/tests/workspace_aws_examples/plan_snapshots/backup_export/module_atlas_aws_module_backup_export[0]_aws_s3_bucket_atlas[0].yaml
@@ -1,3 +1,9 @@
 bucket_prefix: mongodb-atlas-tf-
 force_destroy: <force_destroy>
 region: us-east-1
+tags:
+  Environment: production
+  Module: atlas-aws
+tags_all:
+  Environment: production
+  Module: atlas-aws
