--- a/tests/workspace_aws_examples/plan_snapshots/encryption/module_atlas_aws_module_encryption[0]_aws_kms_key_atlas[0].yaml
+++ b/tests/workspace_aws_examples/plan_snapshots/encryption/module_atlas_aws_module_encryption[0]_aws_kms_key_atlas[0].yaml
@@ -6,3 +6,9 @@ enable_key_rotation: true
 is_enabled: true
 key_usage: ENCRYPT_DECRYPT
 region: us-east-1
+tags:
+  Environment: production
+  Module: atlas-aws
+tags_all:
+  Environment: production
+  Module: atlas-aws
