--- a/tests/workspace_aws_examples/plan_snapshots/encryption/module_atlas_aws_module_cloud_provider_access[0]_aws_iam_role_this.yaml
+++ b/tests/workspace_aws_examples/plan_snapshots/encryption/module_atlas_aws_module_cloud_provider_access[0]_aws_iam_role_this.yaml
@@ -2,3 +2,9 @@ force_detach_policies: false
 max_session_duration: 3600
 name_prefix: mongodb-atlas-abc-shared
 path: /
+tags:
+  Environment: production
+  Module: atlas-aws
+tags_all:
+  Environment: production
+  Module: atlas-aws
