DOCSP-56951 -- Defines project_id and aws_region as the required variables

--- a/docs/inputs_groups.yaml
+++ b/docs/inputs_groups.yaml
@@ -5,6 +5,7 @@ sections:
     match:
       names:
         - project_id
+        - aws_region
 
   - id: cloud_provider_access
     title: "AWS Cloud Provider Access"
