--- a/.github/workflows/pre-release-tests.yml
+++ b/.github/workflows/pre-release-tests.yml
@@ -1,3 +1,5 @@
+# path-sync copy -n sdlc
+# === DO_NOT_EDIT: path-sync header ===
 name: Pre-Release Tests
 run-name: "Pre-Release: examples=${{ inputs.include_examples }}, provider=${{ inputs.provider_ref }}${{ inputs.skip_tftest && ', skip_tftest' || '' }}"
 
@@ -19,17 +21,21 @@ on:
         required: false
         type: boolean
         default: false
+# === OK_EDIT: path-sync header ===
 
+# === DO_NOT_EDIT: path-sync env ===
 env:
   MONGODB_ATLAS_ORG_ID: ${{ secrets.MONGODB_ATLAS_ORG_ID }}
   MONGODB_ATLAS_CLIENT_ID: ${{ secrets.MONGODB_ATLAS_CLIENT_ID }}
   MONGODB_ATLAS_CLIENT_SECRET: ${{ secrets.MONGODB_ATLAS_CLIENT_SECRET }}
   MONGODB_ATLAS_BASE_URL: ${{ secrets.MONGODB_ATLAS_BASE_URL }}
+# === OK_EDIT: path-sync env ===
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   AWS_REGION: ${{ vars.AWS_REGION }}
 
 jobs:
+  # === DO_NOT_EDIT: path-sync job-tftest ===
   tftest-all:
     name: All Terraform Tests
     if: ${{ !inputs.skip_tftest }}
@@ -50,11 +56,13 @@ jobs:
         with:
           provider-ref: ${{ inputs.provider_ref }}
       - run: just tftest-all
+  # === OK_EDIT: path-sync job-tftest ===
 
   apply-and-destroy:
     name: Apply & Destroy Examples
     runs-on: ubuntu-latest
     steps:
+      # === DO_NOT_EDIT: path-sync job-apply-setup ===
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
       - uses: ./.github/actions/setup
         with:
@@ -69,6 +77,7 @@ jobs:
         if: inputs.provider_ref != 'registry' && inputs.provider_ref != 'default'
         with:
           provider-ref: ${{ inputs.provider_ref }}
+      # === OK_EDIT: path-sync job-apply-setup ===
       - name: Generate dev.tfvars
         run: just dev-vars-aws
       - name: Apply examples
