feat: add support for enabling encryption at rest for dedicated search nodes
- Introduced `enabled_for_search_nodes` variable to control BYOK encryption for dedicated search nodes, defaulting to true for secure-by-default experience.
- Updated relevant modules and outputs to reflect this new configuration option.
- Added tests to validate the default and explicit settings for `enabled_for_search_nodes`.

--- a/tests/workspace_aws_examples/plan_snapshots/encryption_private_endpoint/module_atlas_aws_module_encryption[0]_mongodbatlas_encryption_at_rest_this.yaml
+++ b/tests/workspace_aws_examples/plan_snapshots/encryption_private_endpoint/module_atlas_aws_module_encryption[0]_mongodbatlas_encryption_at_rest_this.yaml
@@ -2,6 +2,6 @@ aws_kms_config:
 - enabled: true
   require_private_networking: true
 azure_key_vault_config: []
-enabled_for_search_nodes: false
+enabled_for_search_nodes: true
 google_cloud_kms_config: []
 project_id: <project_id>
